--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<meta http-equiv="Refresh" content="5"; url="index.php" />
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <p>Please follow <a href="index.php">this link</a>.</p>
+  </body>
+</html>
